--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "aos": "^2.3.4",
     "lenis": "^1.3.15",
+    "livekit-client": "^2.16.1",
     "tailwindcss": "^4.1.17"
   }
 }
