--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "vite": "npm:rolldown-vite@7.2.2"
   },
   "dependencies": {
+    "@daily-co/daily-js": "^0.77.0",
     "@studio-freight/lenis": "^1.0.42",
     "@tailwindcss/vite": "^4.1.17",
     "aos": "^2.3.4",
     "lenis": "^1.3.15",
-    "livekit-client": "^2.16.1",
     "tailwindcss": "^4.1.17"
   }
 }
